# AXA_Hackathon

./: README.md  package-lock.json
AXA_Hackathon/: app.json  package-lock.json  package.json  tsconfig.json
AXA_Hackathon/app/: _layout.tsx
AXA_Hackathon/app/(tabs)/: _layout.tsx  acceso.tsx  contacto.tsx  index.tsx  insurance.tsx  menu.tsx
AXA_Hackathon/app/claims/: audio.tsx  new.tsx  photo.tsx  report-summary.tsx  selection.tsx  simplified.tsx
AXA_Hackathon/app/insurance/: offer.tsx  step1.tsx  step2.tsx  step3.tsx  step4.tsx
AXA_Hackathon/components/: InsuranceConditions.tsx  InsuranceLocation.tsx  InsuranceOffer.tsx  InsuranceQuoteForm.tsx
AXA_Hackathon/components/claims/: AIPhotoAnalysis.tsx  ClaimReviewSubmit.tsx  ClaimStatusCard.tsx  ClaimStep.tsx  DateTimeSelector.tsx  DeclarationAcceptance.tsx  DescriptionInput.tsx  EventTypeSelector.tsx  LocationSelector.tsx  MediaAttachments.tsx  PoliceReportInput.tsx  (+5 more)
AXA_Hackathon/constants/: theme.ts
AXA_Hackathon/context/: InsuranceContext.tsx
AXA_Hackathon/stores/: claimStore.ts
AXA_Hackathon/types/: claims.ts
backend/: .env.example  gemini.py  main.py  pyproject.toml  requirements.txt  run.sh  test.sh  test_analyze_vehicle_condition.sh  test_create_personalized_insurance.sh  test_load_insurances.sh  test_process_accident.sh  test_process_image.sh  test_process_image_for_insurance.sh  test_save_insurance.sh
backend/data/: cobertura.txt  familiares_trabajan_explotaciones.csv  insurances.json  seguro.md  tractores_industriales.csv
backend/src/: aemet.py  carapi.py  image_proc.py
backend/test/: ae.py
(+3 files in other folders)
